src/components/Clue/Clue.scss
@use '_variables' as vars;

.MyCrossword {
  .Clue {
    cursor: pointer;
    display: flex;
    align-items: baseline;
    line-height: vars.$line-height;
    padding: vars.$grid-size * 0.4 vars.$grid-size * 1.2 vars.$grid-size * 0.4
      vars.$grid-size * 0.4;
    color: vars.$grid-color;
    border-left: 3px solid transparent;
    user-select: none;
  }
  .Clue--answered {
    color: vars.$grey;
  }
  .Clue--highlighted {
    font-weight: bold;
    color: vars.$grid-color;
  }
  .Clue--highlighted strong {
    font-weight: 800;
  }
  .Clue:not(.Clue--highlighted):hover {
    background-color: vars.$faint-grey4;
  }
  .Clue__num {
    flex: 0 0 vars.$grid-size * 2;
    font-weight: bold;
    margin-right: vars.$grid-size * 2;
  }
  /* prevents layout shift on hover */
  .Clue__text::before {
    display: block;
    content: attr(data-text);
    font-weight: bold;
    height: 0;
    overflow: hidden;
    visibility: hidden;
  }
}

/** Breakpoints **/
.MyCrossword--md {
  .Clue {
    scroll-margin-top: vars.$grid-size * 2.3;
  }
}

/** Theme styles **/
.MyCrossword--yellowTheme {
  .Clue--highlighted {
    background-color: vars.$theme-yellow-light;
    border-color: vars.$theme-yellow;
  }
}

.MyCrossword--pinkTheme {
  .Clue--highlighted {
    background-color: vars.$theme-pink-light;
    border-color: vars.$theme-pink;
  }
}

.MyCrossword--blueTheme {
  .Clue--highlighted {
    background-color: vars.$theme-blue-light;
    border-color: vars.$theme-blue;
  }
}

.MyCrossword--greenTheme {
  .Clue--highlighted {
    background-color: vars.$theme-green-light;
    border-color: vars.$theme-green;
  }
}

.MyCrossword--orangeTheme {
  .Clue--highlighted {
    background-color: vars.$theme-orange-light;
    border-color: vars.$theme-orange;
  }
}

